--- a/Stock Market ML project.ipynb
+++ b/Stock Market ML project.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How to predict tomorrow's S&P 500 index price using historical data**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
